--- a/EAHome.html
+++ b/EAHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Effective Altruists of Berkeley!</title>
+	<title> Effective Altruists of Berkeley</title>
 </head>
 <body>
 
