Starting Menu bar

--- a/EAHome.html
+++ b/EAHome.html
@@ -2,8 +2,42 @@
 <html>
 <head>
 	<title> Effective Altruists of Berkeley</title>
+	<link rel="stylesheet" type="text/css" href="CSS/EAMainDesign.css">
+
 </head>
 <body>
+	<!--Menu Bar pre-transition-->
+	<ul id="navigationMenu">
+    <li>
+	    <a class="home" id="home" href="#">
+            <span>Home</span>
+        </a>
+    </li>
 
+    <li>
+    	<a class="members" id="members" href="#">
+            <span>Members</span>
+        </a>
+    </li>
+
+    <li>
+	     <a class="funding" id="funding" href="#">
+            <span>Funding</span>
+         </a>
+    </li>
+
+    <li>
+    	<a class="decal" id="decal" href="#">
+            <span>Decal</span>
+        </a>
+    </li>
+
+    <li>
+    	<a class="events" id="events" href="#">
+            <span>Events</span>
+        </a>
+    </li>
+</ul>
+	<!--Menu Bar finish-->
 </body>
 </html>
