--- a/EAHome.html
+++ b/EAHome.html
@@ -10,16 +10,6 @@
 
 </head>
 <body>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
-
 
 	<ul id="top-menu">
   <li class="active">
@@ -40,13 +30,26 @@
   <li>
     <a href="#funding">Funding</a>
   </li>
-  <div class="fb-like" data-href="https://www.facebook.com/groups/634368256736500/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+ 
 </ul>
 
-<a id="about">Foo</a>
+
+<video playsinline autoplay muted loop id="bgvid">
+    <source src="http://swf.tubechop.com/tubechop.swf?vurl=QI9ta7qkazU&start=5&end=10&cid=8473563" type="video/swf">
+    <!--<source src="polina.mp4" type="video/mp4">-->
+</video>
+	
+<a id="about">
+&nbsp;
+
+
+
+
+</a>
 
 
 <a id="events">Bar</a>
+
 
 
 <a id="members">Baz</a>
