--- a/EAHome.html
+++ b/EAHome.html
@@ -34,7 +34,7 @@
 </ul>
 
 
-<video playsinline autoplay muted loop id="bgvid">
+<video playsinline autoplay muted loop id="bgvid"> test
     <source src="http://swf.tubechop.com/tubechop.swf?vurl=QI9ta7qkazU&start=5&end=10&cid=8473563" type="video/swf">
     <!--<source src="polina.mp4" type="video/mp4">-->
 </video>
