--- a/EAHome.html
+++ b/EAHome.html
@@ -15,15 +15,17 @@
 <!--<source src="https://www.youtube.com/embed/ICr_bOuM9Zo" type="video/webm">-->
 <source src="css/img/keyboard.mp4._640x360_MP4.mp4" type="video/mp4">
 </video>
-
-<span onclick="openNav()">
-	<div class="container," onclick="transform(this)">
-  		<div class="bar1"></div>
-  		<div class="bar2"></div>
-  		<div class="bar3"></div>
+<div id="icon-orient">
+<span onclick="openNav()" class="openbtn">
+	<div id="nav-icon1">
+  		<span></span>
+  		<span></span>
+  		<span></span>
 	</div>
+	</span>
+</div>
 	
-</span>
+
 	
 <div id="menu-bar" class="overlay">
 	<!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
