finally perfected menu and triggers

--- a/EAHome.html
+++ b/EAHome.html
@@ -16,7 +16,7 @@
 <source src="css/img/keyboard.mp4._640x360_MP4.mp4" type="video/mp4">
 </video>
 <div id="icon-orient">
-<span onclick="openNav()" class="openbtn">
+<span onclick="openNav()" id="btn" class="openbtn">
 	<div id="nav-icon1">
   		<span></span>
   		<span></span>
