--- a/EAabout.html
+++ b/EAabout.html
@@ -31,7 +31,7 @@
 	<!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
 	
 	<div class="overlay-content">
-    <a href="EAabout.html">About</a>
+    <a href="EAHome.html">Home</a>
     <a href="EAevents.html">Events</a>
     <a href="EAmembers.html">Members</a>
     <a href="EAdecal.html">Decal</a>
