--- a/EAevents.html
+++ b/EAevents.html
@@ -31,8 +31,8 @@
 	<!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
 	
 	<div class="overlay-content">
+    <a href="EAHome.html">Home</a>
     <a href="EAabout.html">About</a>
-    <a href="EAevents.html">Events</a>
     <a href="EAmembers.html">Members</a>
     <a href="EAdecal.html">Decal</a>
     <a href="EAfunding.html">Funding</a>
