--- a/EAfunding.html
+++ b/EAfunding.html
@@ -31,11 +31,11 @@
 	<!--<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>-->
 	
 	<div class="overlay-content">
-    <a href="EAabout.html">About</a>
+    <a href="EAHome.html">Home</a>
     <a href="EAevents.html">Events</a>
     <a href="EAmembers.html">Members</a>
     <a href="EAdecal.html">Decal</a>
-    <a href="EAfunding.html">Funding</a>
+    <a href="EAabout.html">About</a>
 
   </div>
 </div>
