--- a/EAfunding.html
+++ b/EAfunding.html
@@ -41,13 +41,9 @@
 </div>
 
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
+
+<div class="header">
 	
-
-
-
-
-
-
-</body>
-
+</div>
+	</body>
 </html>
