--- a/EAHome.html
+++ b/EAHome.html
@@ -15,6 +15,7 @@
 <!--<source src="https://www.youtube.com/embed/ICr_bOuM9Zo" type="video/webm">-->
 <source src="css/img/keyboard.mp4._640x360_MP4.mp4" type="video/mp4">
 </video>
+<div class="topbar">
 <div id="icon-orient">
 <span onclick="openNav()" id="btn" class="openbtn">
 	<div id="nav-icon1">
@@ -41,8 +42,11 @@
 </div>
 
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
-	
+	</div>	
 
+<div class="header">
+	<h1>Effective Altruists at Berkeley</h1>
+</div>
 
 
 
