--- a/EAHome.html
+++ b/EAHome.html
@@ -45,13 +45,10 @@
 	</div>	
 
 <div class="header">
-	<h1>Effective Altruists at Berkeley</h1>
+	<h3>Effective Altruists at Berkeley</h3>
 </div>
-
-
-
-
-
+<div class="body">
+	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+</div>
 </body>
-
 </html>
