--- a/EAHome.html
+++ b/EAHome.html
@@ -48,7 +48,9 @@
 	<h3>Effective Altruists at Berkeley</h3>
 </div>
 <div class="body">
+&nbsp;
 	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+	<img src="CSS/img/ealogo.svg" width="30%"/>
 </div>
 </body>
 </html>
