--- a/EAevents.html
+++ b/EAevents.html
@@ -42,7 +42,12 @@
 
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
 	
-
+<div class="header">
+	<h3>Effective Altruists at Berkeley</h3>
+</div>
+<div class="body">
+	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+</div>
 
 
 
