about page title and quote

--- a/EAabout.html
+++ b/EAabout.html
@@ -41,11 +41,14 @@
 </div>
 
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
-	
-<div class="header">
-	<h3>Effective Altruists at Berkeley</h3>
-</div>
 <div class="body">
+	<p>"...Anna decides that being a person with cancer who starts a cancer charity is a bit narcissistic, so she starts a charity called The Anna Foundation for People with Cancer Who Want to Cure Cholera.”  
+	&nbsp;--John Green,<i> The Fault in Our Stars</i></p>
+</div>
+<div class="header">
+	<h3>What is Effective Altruism?</h3>
+</div>
+<div class="body2">
 	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
 </div>
 
