About page done, with modifications necessary

--- a/EAabout.html
+++ b/EAabout.html
@@ -49,7 +49,81 @@
 	<h3>What is Effective Altruism?</h3>
 </div>
 <div class="body2">
-	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+	<p>Effective altruists are the cancer patients who cure cholera. We spend our time obsessing over how to do the most good possible, how to solve the biggest problems we can -- whether those problems personally affect us or not. </p>
+	<br>
+	<figure>
+	<img src="CSS/img/eag.jpg" width="50%" style="border-radius: 25px"/>
+	<figcaption><i>Effective Altruism Global 2015, the biggest ever gathering of the effective altruist community.</i>
+	</figcaption>
+	</figure>
+	<br>
+	We operate on three basic principles:
+	<br>
+	<ul>
+		<li><b>Consequentialism:</b> We do not believe that it's the thought that counts. We evaluate our actions based on their consequences for well-being, not on what we meant to do or whether we were following the right rules.
+		</li>
+		<li><b>Egalitarianism:</b> We believe that every being who suffers deserves care. Those who happened to be born in our own nation, generation, or species are not automatically superior. 
+		</li>
+		<li><b>Maximization:</b> We see no reason to stop when we could do more. We are always looking for ways to get more leverage, better skills, and more resources so we can improve more lives.
+		</li>
+	</ul>
+	<br>
+	So what does this mean in practice? What are effective altruists doing?
+	&nbsp;
+	<br>
+
+	<ul>
+		<li>
+			We're <b>changing incentives in the international aid community </b>by demanding and rewarding rigorous evidence of impact rather than emotional advertisement and miraculous claims
+		</li>
+		<li>
+			We're getting top researchers and entrepreneurs to invest in <b>ethical and safe implementations</b> of world-changing technologies like artificial intelligence
+		</li>
+		<li>
+			We're helping a generation of <b>ambitious young people</b> realize their potential through research on high impact careers
+		</li>
+	</ul>
+	<br>
+	&nbsp;
+	We'll never figure out how to do the most good we can. But with courage, research, and mutual support, we've come pretty far.
+	<br>
+	&nbsp;
+</div>
+<div class="body3">
+&nbsp;
+<br>
+<left>
+	<p>
+		We founded EA Berkeley in Fall 2014 with only two active members, who taught the first version of our DeCal in Spring 2015. Through the DeCal, we found a group of kindred spirits in our students and friends.
+	</p>
+	<br>
+	<p>
+		On May 15, 2015, a group of us gathered to take a pledge to give at least ten percent of our income to the most effective nonprofits in the most impactful causes. 
+	</p>
+	<br>
+	<p>
+		With our combined future salaries, this is around $1 million pledged to transform the world, from alleviating poverty to fighting factory farming to conducting life-saving scientific research. 
+	</p>
+	<br>
+	</left>
+	<center>
+	<figure>
+		<img src="CSS/img/pledge.jpg" width="50%" />
+		<figcaption><i>Our Spring 2015 pledge ceremony, the first ever gathering of the EA Berkeley community.
+</i></figcaption>
+	</figure>
+	<br>
+	</center>
+	&nbsp;
+	<p>
+We've got even bigger things in store this semester: a better DeCal, awesome speaker events, altruistic career planning workshops, fun social events, and more! 
+	</p>
+	<br>
+	<p>
+Join on Callink! We couldn't do any of this without passionate, dedicated members like you :)
+	</p>
+	<br>
+	
 </div>
 
 
