added more pages

--- a/EAabout.html
+++ b/EAabout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Effective Altruists of Berkeley</title>
+	<title> About</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 	<script src="JS/EAMainJS.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/EAMainDesign.css">
