--- a/EAmembers.html
+++ b/EAmembers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Effective Altruists of Berkeley</title>
+	<title>Members</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 	<script src="JS/EAMainJS.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/EAMainDesign.css">
@@ -43,10 +43,13 @@
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
 	
 <div class="header">
-	<h3>Effective Altruists at Berkeley</h3>
+	<h3>Members</h3>
 </div>
 <div class="body">
-	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+<br>
+	<h4>...</h4>
+<br>
+&nbsp;
 </div>
 
 
