--- a/EAdecal.html
+++ b/EAdecal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Effective Altruists of Berkeley</title>
+	<title> Our Decal</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 	<script src="JS/EAMainJS.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/EAMainDesign.css">
@@ -43,10 +43,20 @@
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
 	
 <div class="header">
-	<h3>Effective Altruists at Berkeley</h3>
+	<h3>Our Decal</h3>
 </div>
 <div class="body">
-	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+	<h4>"What's the absolute best way I can improve the world with my life?"</h4>
+</div>
+<div class="body2">
+	<br>
+	If you've ever asked yourself that question, this class is for you. If you've ever been dissatisfied by all the answers ("Just follow your heart!" "Don't sweat it so much!" "The answer will come to you one day!"), this class is for you.  
+	<br>
+	&nbsp;
+	<br>
+	For more information, visit our <a href="http://eab.berkeley.edu/decal">old website.</a> Soon to be updated. 
+	<br>
+	&nbsp;
 </div>
 
 
