--- a/EAfunding.html
+++ b/EAfunding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Effective Altruists of Berkeley</title>
+	<title> Funding</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 	<script src="JS/EAMainJS.js"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/EAMainDesign.css">
@@ -42,11 +42,22 @@
 
 <img src="CSS/img/EApic.png" id="ealogo" class="ealogo" />
 <div class="header">
-	<h3>Effective Altruists at Berkeley</h3>
+	<h3>Supporters</h3>
 </div>
 <div class="body">
-	<body>EA Berkeley represents a growing social movement called Effective Altruism. We aim to use research and reflection to maximize the positive impact we have. </body>
+<br>
+	<h4>Good Ventures Grant:</h4>
+	<p style="align:left">The philanthropic foundation Good Ventures gave us a $10,000 grant to support the Spring 2015 version of our DeCal. We used part of the money to play giving games during the class: every week, each student would get $20 and choose one of two charities to donate it to. The leftover money now supports our club operations and the Spring 2016 version of the DeCal. Their grant writeup and our detailed commentary are available <a href="http://www.goodventures.org/our-portfolio/grants/effective-altruists-of-berkeley-decal-university-course"> here</a>.
+	</p>
+	<br>
+	&nbsp;
+	<h4>Others:</h4>
+	<p>We received a $100 unrestricted grant from Studypool, a leader in online homework help.</p>
 </div>
+<div class="header2">
+	<h4>Expenses</h4>
+</div>
+
 
 	</body>
 </html>
