finished first draft

--- a/EAfunding.html
+++ b/EAfunding.html
@@ -57,7 +57,61 @@
 <div class="header2">
 	<h4>Expenses</h4>
 </div>
+<div id="fundingbody2">
+<br>
+	You can see the details of all funding sources and expenses for our DeCal during Spring 2015 here.
+<br>
+&nbsp;
+As we spend money over the semester, we will keep a similar log of expenses below. Please check back often and let us know if anything seems off or you want more details on a purchase or donation we made!
 
-
+<br>
+&nbsp;
+</div>
+<div id="givinggames-header" class="table">
+	<h4>Giving Games</h4>
+</div>
+<div id="decal-header" class="table">
+	<h4>DeCal Expenses</h4>
+</div>
+<div id="misc-header" class="table">
+	<h4>Miscellaneous</h4>
+</div>
+<div id="givinggames-body" class="table-body">
+<br>
+	<p>Around $50-100 goes to donations done through giving games we play on Sproul plaza. We give you a dollar, and introduce you to two charities -- you get to choose where the dollar goes. </p>
+<br>
+&nbsp;
+	<p>
+		It's a fun and easy way to get into the habit of being thoughtful about giving -- come check us out Tuesdays from 11 AM to 1 PM!
+	</p>
+<br>
+</div>
+<div id="decal-body" class="table-body">
+<br>
+	<p>
+		Around $4000-5000 will go to the DeCal. A few hundred dollars will cover travel expenses for some of our speakers. 
+	</p>
+<br>
+	<p>
+		The rest will be donated as part of larger in-class giving games -- students will get $20-50 to donate each game. We will also offer matching for any donation students make out of their own money until we run out of money.
+	</p>
+<br>
+</div>
+<div id="misc-body" class="table-body">
+<br>
+	<p>
+		Around $50-100 goes to paying for posters, flyers, online ads, and other advertisement materials to get the word out.
+	</p>
+<br>
+	<p>
+		Around $200-300 goes to events: talks, movie screenings, etc. Money goes to room, electronics, and food.
+	</p>
+<br>
+</div>
+<div class="body3">
+<br>
+	<center><h2>If you'd like to donate, email eaofberkeley@gmail.com</h2></center>
+<br>
+</div>
 	</body>
 </html>
